# pypetting

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  LICENSE.md  README.md  setup.cfg
.github/workflows/: test.yml
examples/: wash.py
pypetting/: __init__.py  base.py  errors.py  incubate.py  infinite.py  io.py  labware.py  liha.py  mca.py  message.py  misc.py  pipette.py  pipetting.py  roma.py  storex.py  teshake.py  tips.py  transfer.py  utils.py  write.py
src/: utils.py
test/: test_base.py  test_liha.py  test_mca.py  test_misc.py  test_teshake.py
