[metadata]
name = pypetting
version = 0.7.0
description = Generate worklists for Tecan EVOware pipetting software
long_description = file: README.md, LICENSE
url = https://github.com/sirno/pypetting
license = MIT

[options]
packages = pypetting
install_requires =
    numpy
    dataclasses-json
    requests

[options.entry_points]
console_scripts =
    pypetting-message-service = pypetting.message:message_service