[metadata]
name = pypetting
version = 0.7.1
description = Generate worklists for Tecan EVOware pipetting software
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/sirno/pypetting
license = MIT

[options]
packages = pypetting
install_requires =
    numpy
    dataclasses-json
    requests

[options.extras_require]
dev = pylint; pytest; pytest-cov

[options.entry_points]
console_scripts =
    pypetting-message-service = pypetting.message:message_service

[tox:tox]
envlist = py310
isolated_build = True

[gh-actions]
python =
    3.10: py310

[testenv]
commands =
    pip install .[dev]
    pylint --fail-under=9.5 pypetting
    coverage erase
    pytest test --cov={envsitepackagesdir}/pypetting {posargs}
    coverage report

[coverage:run]
relative_files = True
omit = test/*

[pylint.MESSAGES CONTROL]
disable=raw-checker-failed,
         bad-inline-option,
         locally-disabled,
         file-ignored,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
         use-symbolic-message-instead,
         too-many-arguments
